# CompanyResearchAgent

./: .gitignore  DEPLOY.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  env.example.txt
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  data_agent.py  data_collector.py  finance_agent.py  financial_analyzer.py  insight_agent.py  intent_agent.py  market_agent.py  market_analyzer.py  report_generator.py  research_orchestrator.py  search_agent.py  writer_agent.py
backend/app/api/: __init__.py  auth.py  chat.py  reports.py  research.py
backend/app/models/: __init__.py  conversation.py  research.py  user.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  report_service.py  research_service.py
backend/app/tools/: __init__.py  pdf_generator.py  serper_search.py
backend/app/utils/: __init__.py  streaming_llm.py  ws_manager.py
backend/app/workflows/: __init__.py  research_workflow.py
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts  vite-env.d.ts
frontend/src/api/: auth.ts  chat.ts  research.ts
frontend/src/components/: AgentBubble.vue  CompanyInput.vue  ReportPreviewCard.vue  ReportViewer.vue  ResearchProgress.vue
frontend/src/stores/: research.ts
frontend/src/types/: index.ts
frontend/src/views/: ChatView.vue  HistoryView.vue  Home.vue  HomePage.vue  LoginView.vue  (+2 more)
(+4 files in other folders)
